# MCP_AI_SOC_Sher

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build_and_install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_mcp_ai_soc.py  setup.py
data/: init_sample_db.py  sample_schema.sql
docs/: configuration.md  index.md  installation.md  security.md
examples/: local_server_example.py  remote_server_example.py
mcp_ai_soc_sher/: __init__.py  __main__.py
mcp_ai_soc_sher/common/: __init__.py  agent.py  config.py  db_utils.py  prompts.py
mcp_ai_soc_sher/local/: __init__.py  server.py
mcp_ai_soc_sher/remote/: __init__.py  server.py
mcp_ai_soc_sher/security/: __init__.py  threat_analyzer.py
scripts/: create_package.sh
tests/: __init__.py  test_db_utils.py  test_threat_analyzer.py
