[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ai-soc-sher"
version = "0.1.0"
description = "An AI-powered SOC Text2SQL MCP Server for converting natural language to SQL queries"
readme = "README.md"
authors = [
    {name = "Akram Sheriff", email = "YOUR_EMAIL@example.com"}
]
license = {text = "MIT License with Additional Conditions"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/akramsheriff/mcp-ai-soc-sher"
"Bug Tracker" = "https://github.com/akramsheriff/mcp-ai-soc-sher/issues"

[project.scripts]
mcp-ai-soc-local = "mcp_ai_soc_sher.local.server:main"
mcp-ai-soc-remote = "mcp_ai_soc_sher.remote.server:main"
mcp-ai-soc = "mcp_ai_soc_sher.__main__:main"